--- a/templates/skin/synio/css/userstatus.css
+++ b/templates/skin/synio/css/userstatus.css
@@ -3,18 +3,26 @@
     position: relative;
     margin-top: 10px;
 }
-.profile-status span.my-status {
-    color: #000;
-    font-size: 13px
-}
-.profile-status span.no-status {
+.profile-status .status-view {
+    font-size: 13px;
     color: #949aa1;
-    font-size: 13px
+    cursor: pointer;
 }
-.profile-status #status_editor {
+.profile-status .status-view.has {
+    color: #000;
+}
+.profile-status .status-update {
+    color: #949aa1;
+    font-style: italic;
+    font-size: 0.8em;
+    text-transform: lowercase;
+}
+
+.profile-status .status-editor {
     position: absolute;
     top: -10px;
     left: -11px;
+    display: none;
     -moz-border-radius: 6px;
     -webkit-border-radius: 6px;
     border-radius: 6px;
@@ -24,16 +32,20 @@
     box-shadow: 0 0 15px;
     z-index: 11;
 }
-.profile-status #editor_text {
+.profile-status .status-editor input[type="text"] {
+    margin-bottom: 5px;
+    width: 400px;
     font-size: 13px;
-    margin-bottom: 5px
 }
-.profile-status #status_view {
-
+.profile-status .status-editor button {
+    float: right;
+    margin-left: 7px;
 }
-.profile-status #status_update {
-    color: #949aa1;
-    font-style: italic;
-    font-size: 0.8em;
-    text-transform: lowercase;
+.profile-status .status-editor-buttons:before,
+.profile-status .status-editor-buttons:after {
+    content: '';
+    display: table;
+}
+.profile-status .status-editor-buttons:after {
+    clear: both;
 }
